# cups-filters

./: .bzrignore  .gitignore  AUTHORS  AUTHORS.txt  CHANGES-1.x.md  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  COPYING  DEVELOPING.md  INSTALL  INSTALL.txt  LICENSE.txt  Makedefs.in  Makefile  Makefile.am  NEWS  NOTICE  README  README.md  README.txt  autogen.sh  config.h.in  configure.ac  configure.in  install-sh  ipp.patch  libcupsfilters.pc.in  libfontembed.pc.in  libppd.pc.in  libppdc.pc.in  mupdftopwg  pwgtopclm  pwgtopdf  test.ps  testppd
.github/workflows/: build-freebsd.yml  build.yml  cppcheck.yml  static-analysis.yml
backend/: Dependencies  Makefile  backend-private.h  beh.c  cups-brf.c  ieee1284.c  implicitclass.c  parallel.c  serial.c  test1284.c
banners/: classified  confidential  form  secret  standard  topsecret  unclassified
charset/: pdf.utf-8.heavy  pdf.utf-8.simple
conf/: Makefile  legacy.convs
config-scripts/: cups-common.m4  cups-compiler.m4  cups-directories.m4  cups-image.m4  cups-largefile.m4  cups-libtool.m4  cups-opsys.m4  cups-pdf-filters.m4  cups-pdf.m4  cups-scripting.m4  cups-sharedlibs.m4
cups/: ppd-cache.c
cupsfilter/: Makefile  image-private.h
cupsfilters/: Dependencies  Makefile  attr.c  bannertopdf.c  bitmap.c  bitmap.h  catalog.c  catalog.h  check.c  cmyk.c  colord.c  colord.h  colormanager.c  colormanager.h  debug-internal.h  debug.c  dither.c  driver.h  filter.c  filter.h  fontembed-private.h  fontembed.h  getline.c  ghostscript.c  ieee1284.c  ieee1284.h  image-bmp.c  image-colorspace.c  image-gif.c  image-jpeg.c  image-photocd.c  image-pix.c  image-png.c  image-pnm.c  image-private.h  image-sgi.c  image-sgi.h  image-sgilib.c  image-sun.c  image-tiff.c  (+50 more)
cupsfilters/fontembed/: README  aglfn13.c  dynstring-private.h  dynstring.c  embed-pdf-private.h  embed-pdf.c  embed-sfnt-private.h  embed-sfnt.c  embed.c  fontfile.c  frequent-private.h  frequent.c  macroman-private.h  sfnt-private.h  sfnt-subset.c  sfnt.c  test-analyze.c  test-pdf.c  test-ps.c
cupsfilters/pdftopdf/: intervalset-private.h  intervalset.cc  intervalset.cxx  intervalset.h  nup-private.h  nup.cc  nup.cxx  nup.h  pdftopdf-jcl-private.h  pdftopdf-jcl.cxx  pdftopdf-private.h  pdftopdf-processor-private.h  pdftopdf-processor.cxx  pdftopdf.cc  pdftopdf.cxx  pdftopdf.h  pdftopdf_jcl.cc  pdftopdf_jcl.h  pdftopdf_processor.cc  pdftopdf_processor.cxx  pdftopdf_processor.h  pptypes-private.h  pptypes.cc  pptypes.cxx  pptypes.h  qpdf-cm-private.h  qpdf-cm.cxx  qpdf-pdftopdf-private.h  qpdf-pdftopdf-processor-private.h  (+18 more)
cupslegacy/: Dependencies  Makefile  attr.c  cmyk.c  testcmyk.c  testrgb.c
data/: banner-instr-append.txt  classified.ps  confidential.ps  form-instr-append.txt  form_english_in.odt  form_russian_in.odt  makePDFfromPS.sh  secret.ps  standard.ps  testprint  testprint-instr-append.txt  topsecret.ps  unclassified.ps
drv/: cupsfilters.drv  custom-media-lines  generic-brf.drv  generic-ubrl.drv  indexv3.drv  indexv4.drv
filter/: Dependencies  Generic-PDF_Printer-PDF.ppd  HP-Color_LaserJet_CM3530_MFP-PDF.ppd  Makefile  PDFError.h  banner.c  banner.h  bannertopdf.c  bannertops.c  colord.h  commandtoescpx.c  commandtopclx.c  common.c  common.h  cupsfilters.convs  cupsfilters.drv  cupsfilters.types  escp.h  getline.c  gstopdf  gstopdf.c  gstopxl  gstopxl.c  gstopxl.in  gstoraster.c  imagetopdf.c  imagetopdf.convs  imagetopdf.types  imagetops  imagetops.c  imagetops.in  imagetoraster.c  legacy.convs  mupdftopwg.c  mupdftoraster.c  pcl-common.c  pcl-common.h  pcl.h  pclmtoraster.c  pclmtoraster.cxx  (+50 more)
fontembed/: aglfn13.c  bitset.h  debug-internal.h  dynstring-private.h  dynstring.c  embed-pdf-int-private.h  embed-pdf.c  embed-pdf.h  embed-sfnt-int-private.h  embed-sfnt.c  embed.c  embed.h  embed_pdf.c  embed_pdf.h  embed_sfnt.c  embed_sfnt_int.h  fontfile.c  fontfile.h  frequent.c  iofn.h  macroman.h  main.c  sfnt-int-private.h  sfnt-subset.c  sfnt.c  sfnt.h  sfnt_subset.c  test-analyze.c  test-pdf.c  test-ps.c  test_analyze.c  test_pdf.c  test_ps.c
m4/: ac_ln_srf.m4  basic-directories.m4
mime/: braille.convs  braille.types  cupsfilters-ghostscript-appleraster.convs  cupsfilters-ghostscript.convs  cupsfilters-individual.convs  cupsfilters-individual.convs.in  cupsfilters-mupdf.convs  cupsfilters-poppler.convs  cupsfilters-universal-postscript.convs  cupsfilters-universal.convs  cupsfilters.convs  cupsfilters.convs.in  cupsfilters.types  universal.convs  universal.types
pdftoopvp/: Dependencies  Makefile  OPVPError.h  OPVPOutputDev.cxx  OPVPOutputDev.h  pdftoopvp.cxx
pdftopdf/: Dependencies  Makefile  P2PCMap.cxx  P2PCharCodeToUnicode.cxx  P2PDoc.h  P2PFont.cxx  P2PForm.cxx  P2PGfx.cxx  P2PGfx.h  P2PMatrix.h  P2PObject.cxx  P2PObject.h  P2POutput.cxx  P2POutput.h  P2POutputStream.cxx  P2POutputStream.h  P2PPage.cxx  P2PPage.h  P2PPageTree.cxx  P2PPattern.cxx  P2PPattern.h  P2PResources.cxx  P2PXRef.cxx  PDFFTrueTypeFont.cxx  PDFFTrueTypeFont.h  parseargs.cxx  pdf2pdf.cxx  pdftopdf.cxx
ppd/: Fuji_Xerox-DocuPrint_CM305_df-PDF.ppd  Generic-PDF_Printer-PDF.ppd  HP-Color_LaserJet_CM3530_MFP-PDF.ppd  HP-PhotoSmart_Pro_B8300-hpijs-pdftoijs.ppd  README.md  Ricoh-PDF_Printer-PDF.ppd  array-private.h  array.c  cups-private.h  debug-internal.h  debug-private.h  debug.c  drv2ppd.cxx  encode.c  epson.h  file-private.h  file.c  genstrings.cxx  hp.h  imagetops-pstops.c  ipp-private.h  label.h  language-private.h  language.c  pdftops.c  ppd-attr.c  ppd-cache.c  ppd-collection.c  ppd-collection.cxx  ppd-conflicts.c  ppd-custom.c  ppd-emit.c  ppd-filter.c  ppd-filter.h  ppd-generator.c  ppd-ipp.c  ppd-load-profile.c  ppd-localize.c  ppd-mark.c  ppd-page.c  (+45 more)
ppdc/: ppdc-driver.cxx  ppdc-import.cxx
ppdfiles/: Fuji_Xerox-DocuPrint_CM305_df-PDF.ppd  Generic-PDF_Printer-PDF.ppd  HP-Color_LaserJet_CM3530_MFP-PDF.ppd  Ricoh-PDF_Printer-PDF.ppd  pxlcolor.ppd  pxlmono.ppd
utils/: cups-browsed-upstart.conf  cups-browsed.8  cups-browsed.c  cups-browsed.conf.5  cups-browsed.conf.in  cups-browsed.in  cups-browsed.service  driverless-fax  driverless-fax.in  driverless.1  driverless.c
(+161 files in other folders)
